; ModuleID = '/home/carl/AnghaBench/linux/tools/perf/util/extr_machine.c_machine__get_kernel_start.c'
source_filename = "/home/carl/AnghaBench/linux/tools/perf/util/extr_machine.c_machine__get_kernel_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.machine = type { i64 }
%struct.map = type { i64 }

@.str = private unnamed_addr constant [7 x i8] c"x86_64\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @machine__get_kernel_start(%struct.machine* %0) #0 {
  %2 = alloca %struct.machine*, align 8
  %3 = alloca %struct.map*, align 8
  %4 = alloca i32, align 4
  store %struct.machine* %0, %struct.machine** %2, align 8
  %5 = load %struct.machine*, %struct.machine** %2, align 8
  %6 = call %struct.map* @machine__kernel_map(%struct.machine* %5)
  store %struct.map* %6, %struct.map** %3, align 8
  store i32 0, i32* %4, align 4
  %7 = load %struct.machine*, %struct.machine** %2, align 8
  %8 = getelementptr inbounds %struct.machine, %struct.machine* %7, i32 0, i32 0
  store i64 -9223372036854775808, i64* %8, align 8
  %9 = load %struct.map*, %struct.map** %3, align 8
  %10 = icmp ne %struct.map* %9, null
  br i1 %10, label %11, label %27

11:                                               ; preds = %1
  %12 = load %struct.map*, %struct.map** %3, align 8
  %13 = call i32 @map__load(%struct.map* %12)
  store i32 %13, i32* %4, align 4
  %14 = load i32, i32* %4, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %26, label %16

16:                                               ; preds = %11
  %17 = load %struct.machine*, %struct.machine** %2, align 8
  %18 = call i32 @machine__is(%struct.machine* %17, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %26, label %20

20:                                               ; preds = %16
  %21 = load %struct.map*, %struct.map** %3, align 8
  %22 = getelementptr inbounds %struct.map, %struct.map* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = load %struct.machine*, %struct.machine** %2, align 8
  %25 = getelementptr inbounds %struct.machine, %struct.machine* %24, i32 0, i32 0
  store i64 %23, i64* %25, align 8
  br label %26

26:                                               ; preds = %20, %16, %11
  br label %27

27:                                               ; preds = %26, %1
  %28 = load i32, i32* %4, align 4
  ret i32 %28
}

declare dso_local %struct.map* @machine__kernel_map(%struct.machine*) #1

declare dso_local i32 @map__load(%struct.map*) #1

declare dso_local i32 @machine__is(%struct.machine*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
